add_library(avcodec)
target_link_libraries(avcodec PRIVATE ffmpeg_defaults)
target_include_directories(avcodec PRIVATE $<$<COMPILE_LANGUAGE:ASM_NASM>:${CMAKE_CURRENT_SOURCE_DIR}/x86>)

if(WIN32)
    target_link_libraries(avcodec PRIVATE strmiids.lib mfplat.lib mfuuid.lib)
endif()

target_sources(avcodec PRIVATE
    012v.c
    8bps.c
    8svx.c
    a64multienc.c
    aac_ac3_parser.c
    aac_adtstoasc_bsf.c
    aac_parser.c
    aaccoder.c
    4xm.c
    aacenc.c
    aacdec.c
    aacenc_is.c
    aacenc_ltp.c
    aacdec_fixed.c
    aacpsdsp_float.c
    aacenc_tns.c
    aacenc_pred.c
    aacpsdsp_fixed.c
    aacenctab.c
    aacps_fixed.c
    aacps_float.c
    aandcttab.c
    aacsbr_fixed.c
    ac3.c
    aacpsy.c
    aacsbr.c
    aasc.c
    ac3dec_data.c
    ac3_channel_layout_tab.c
    aacps_common.c
    ac3tab.c
    ac3dsp.c
    ac3enc_fixed.c
    acelp_filters.c
    ac3enc_float.c
    aactab.c
    adpcm_data.c
    acelp_pitch_delay.c
    ac3_parser.c
    acelp_vectors.c
    adpcmenc.c
    adts_header.c
    adx.c
    adts_parser.c
    ac3dec_fixed.c
    ac3dec_float.c
    adpcm.c
    ac3enc.c
    adxdec.c
    alacdsp.c
    alac_data.c
    adx_parser.c
    adxenc.c
    aic.c
    agm.c
    alac.c
    aliaspixdec.c
    alacenc.c
    aliaspixenc.c
    alsdec.c
    amr_parser.c
    anm.c
    ansi.c
    apedec.c
    aptx.c
    allcodecs.c
    aptxdec.c
    arbc.c
    aptxenc.c
    ass.c
    ass_split.c
    argo.c
    amrnbdec.c
    amrwbdec.c
    assenc.c
    assdec.c
    asv.c
    asvenc.c
    atrac1.c
    atrac3plus.c
    atrac3plusdsp.c
    asvdec.c
    atrac.c
    audiodsp.c
    audio_frame_queue.c
    atrac3.c
    av1_frame_split_bsf.c
    atsc_a53.c
    aura.c
    av1_metadata_bsf.c
    av1_frame_merge_bsf.c
    atrac3plusdec.c
    av1_parse.c
    atrac9dec.c
    av1_parser.c
    av1dec.c
    avs2.c
    avfft.c
    avdct.c
    avrndec.c
    avs.c
    avpacket.c
    avs2_parser.c
    avcodec.c
    avuidec.c
    avs3_parser.c
    avuienc.c
    bethsoftvideo.c
    bfi.c
    binkdsp.c
    bgmc.c
    binkaudio.c
    bintext.c
    bitpacked_dec.c
    bitstream.c
    bitstream_filters.c
    bitpacked_enc.c
    blockdsp.c
    bink.c
    bmp_parser.c
    bmp.c
    bmpenc.c
    bmvaudio.c
    bmvvideo.c
    bswapdsp.c
    brenderpix.c
    bsf.c
    c93.c
    cabac.c
    canopus.c
    cavs.c
    cavsdata.c
    cavs_parser.c
    cavsdec.c
    cbrt_data.c
    cavsdsp.c
    cbrt_data_fixed.c
    cbs.c
    cbs_bsf.c
    cbs_av1.c
    cbs_vp9.c
    cdgraphics.c
    cbs_mpeg2.c
    cbs_sei.c
    cbs_h2645.c
    ccaption_dec.c
    cga_data.c
    cfhddata.c
    cdtoons.c
    cfhd.c
    cfhdencdsp.c
    cdxl.c
    celp_filters.c
    cfhddsp.c
    celp_math.c
    cfhdenc.c
    chomp_bsf.c
    cinepak.c
    cljrenc.c
    cinepakenc.c
    codec_par.c
    codec_desc.c
    cngdec.c
    cljrdec.c
    cllc.c
    cri_parser.c
    cpia.c
    cngenc.c
    cook_parser.c
    cri.c
    cscd.c
    cyuv.c
    clearvideo.c
    cook.c
    dca.c
    dca_core.c
    dca_sample_rate_tab.c
    dca_core_bsf.c
    dca_exss.c
    dca_lbr.c
    dca_parser.c
    dca_xll.c
    d3d11va.c
    dcaadpcm.c
    dcadata.c
    dcadct.c
    dcadsp.c
    dcahuff.c
    dct32_float.c
    dcaenc.c
    dct32_fixed.c
    dct.c
    dfpwmdec.c
    decode.c
    dds.c
    dirac_dwt.c
    dirac_arith.c
    dcadec.c
    dirac_parser.c
    dirac_vlc.c
    dfa.c
    dfpwmenc.c
    dirac.c
    diractab.c
    diracdsp.c
    diracdec.c
    dnxhd_parser.c
    dnxhddec.c
    dolby_e_parse.c
    dolby_e_parser.c
    dovi_rpu.c
    dnxhddata.c
    dpcm.c
    dpx.c
    dpx_parser.c
    dpxenc.c
    dnxhdenc.c
    dolby_e.c
    dsddec.c
    dsicinaudio.c
    dsicinvideo.c
    dv.c
    dsd.c
    dss_sp.c
    dstdec.c
    dump_extradata_bsf.c
    dv_profile.c
    dvdata.c
    dvbsub_parser.c
    dv_error_marker_bsf.c
    dvbsubenc.c
    dvaudiodec.c
    dvd_nav_parser.c
    dvaudio_parser.c
    dvbsubdec.c
    dvdsub.c
    dvdec.c
    dvdsub_parser.c
    dvdsubdec.c
    dvdsubenc.c
    dxtory.c
    dxv.c
    dvenc.c
    eac3_data.c
    eac3_core_bsf.c
    eac3enc.c
    dynamic_hdr10_plus.c
    dynamic_hdr_vivid.c
    eacmv.c
    eaidct.c
    eamad.c
    eatgq.c
    eatgv.c
    eatqi.c
    dxva2.c
    elbg.c
    encode.c
    dxva2_av1.c
    dxva2_h264.c
    escape130.c
    dxva2_hevc.c
    dxva2_mpeg2.c
    error_resilience.c
    escape124.c
    dxva2_vp9.c
    dxva2_vc1.c
    exif.c
    evrcdec.c
    extract_extradata_bsf.c
    faandct.c
    faanidct.c
    fdctdsp.c
    fastaudio.c
    ffv1.c
    ffv1dec.c
    fft_fixed_32.c
    fft_float.c
    fft_init_table.c
    faxcompr.c
    ffv1enc.c
    ffwavesynth.c
    fic.c
    filter_units_bsf.c
    fits.c
    fitsdec.c
    flacdata.c
    fitsenc.c
    flac_parser.c
    float2half.c
    flacdec.c
    flacdsp.c
    flacenc.c
    flicvideo.c
    flacencdsp.c
    file_open.c
    flac.c
    fmtconvert.c
    flvdec.c
    flvenc.c
    fmvc.c
    g722dsp.c
    g722.c
    fraps.c
    g723_1.c
    g722enc.c
    frame_thread_encoder.c
    g723_1enc.c
    g723_1dec.c
    g729_parser.c
    g729postfilter.c
    g726.c
    g729dec.c
    g723_1_parser.c
    gemdec.c
    gdv.c
    g722dec.c
    frwu.c
    golomb.c
    gsmdec_data.c
    gif_parser.c
    gif.c
    get_buffer.c
    gifdec.c
    gsm_parser.c
    h261_parser.c
    gsmdec.c
    h263data.c
    h261.c
    h261data.c
    h261dec.c
    h264_levels.c
    h2645_parse.c
    h261enc.c
    h263.c
    h263_parser.c
    h263dsp.c
    h264_mp4toannexb_bsf.c
    h263dec.c
    h264_metadata_bsf.c
    h264_direct.c
    h264_cavlc.c
    h264_cabac.c
    h264_loopfilter.c
    h264_parse.c
    h264_mb.c
    h264_parser.c
    h264_ps.c
    h264_redundant_pps_bsf.c
    h264_sei.c
    h264_picture.c
    h264chroma.c
    h264data.c
    h264_refs.c
    h264dsp.c
    half2float.c
    h264pred.c
    h264qpel.c
    h274.c
    h265_metadata_bsf.c
    h264_slice.c
    hap.c
    h265_profile_level.c
    hapdec.c
    hcadec.c
    hcom.c
    hapqa_extract_bsf.c
    h264idct.c
    hdr_parser.c
    h264dec.c
    hdrenc.c
    hdrdec.c
    hevc_data.c
    hevc_mp4toannexb_bsf.c
    hevc_parser.c
    hevc_parse.c
    hevc_ps.c
    hevc_sei.c
    hevc_cabac.c
    hq_hqa.c
    hnm4video.c
    hpeldsp.c
    hevc_filter.c
    hevc_mvs.c
    hq_hqadsp.c
    hqx.c
    hq_hqadata.c
    hevc_refs.c
    hqxdsp.c
    hevcdec.c
    hevcdsp.c
    htmlsubtitles.c
    hevcpred.c
    hqxvlc.c
    huffman.c
    huffyuvdec.c
    huffyuvencdsp.c
    huffyuvdsp.c
    huffyuvenc.c
    huffyuv.c
    idcinvideo.c
    iirfilter.c
    iff.c
    idctdsp.c
    ilbcdec.c
    imgconvert.c
    imx.c
    imm5.c
    imx_dump_header_bsf.c
    indeo5.c
    imc.c
    indeo4.c
    imm4.c
    intelh263dec.c
    indeo3.c
    interplayvideo.c
    interplayacm.c
    intrax8dsp.c
    indeo2.c
    ipu_parser.c
    intrax8.c
    ivi_dsp.c
    jni.c
    jacosubdec.c
    jpeg2000dsp.c
    jfdctfst.c
    jfdctint.c
    jpeg2000_parser.c
    ituh263dec.c
    jpegls.c
    jpeg2000dwt.c
    jpeg2000dec.c
    ituh263enc.c
    jpeglsdec.c
    jpegtables.c
    jpeg2000.c
    ivi.c
    j2kenc.c
    jpeglsenc.c
    kbdwin.c
    jrevdct.c
    lossless_audiodsp.c
    kgv1dec.c
    kmvc.c
    jvdec.c
    lossless_videoencdsp.c
    latm_parser.c
    lpc.c
    loco.c
    lsp.c
    lzf.c
    lzw.c
    ljpegenc.c
    lossless_videodsp.c
    lagarith.c
    lagarithrac.c
    lcldec.c
    lzwenc.c
    mace.c
    m101.c
    magicyuv.c
    magicyuvenc.c
    mdct15.c
    mdct_float.c
    mdct_fixed_32.c
    mathtables.c
    mdec.c
    mediacodec.c
    metasound.c
    me_cmp.c
    metasound_data.c
    microdvddec.c
    midivid.c
    mjpeg2jpeg_bsf.c
    mjpeg_parser.c
    mjpega_dump_header_bsf.c
    mjpegenc_huffman.c
    mjpegbdec.c
    mjpegdec.c
    mjpegdec_common.c
    mlp_parse.c
    mimic.c
    mlpdsp.c
    mlp_parser.c
    mf_utils.c
    mlp.c
    mjpegenc.c
    mjpegenc_common.c
    mfenc.c
    mlpdec.c
    mlz.c
    mmvideo.c
    mlpenc.c
    movsub_bsf.c
    mobiclip.c
    movtextdec.c
    movtextenc.c
    motion_est.c
    mp3_header_decompress_bsf.c
    mpeg12data.c
    mpc.c
    motionpixels.c
    mpc8.c
    mpeg4audio_sample_rates.c
    mpc7.c
    mpeg4audio.c
    mpegaudiodata.c
    mpeg12.c
    mpeg12enc.c
    mpeg12framerate.c
    mpegaudio.c
    mpegaudio_parser.c
    mpeg12dec.c
    mpeg2_metadata_bsf.c
    mpeg4_unpack_bframes_bsf.c
    mpeg4video_parser.c
    mpeg4video.c
    mpeg4videodec.c
    mpegaudiodsp_data.c
    mpeg4videoenc.c
    mpegaudiodec_common.c
    mpegaudiodecheader.c
    mpeg_er.c
    mpegaudiodec_float.c
    mpegaudiodec_fixed.c
    mpegaudiotabs.c
    mpegaudiodsp.c
    mpegaudioenc_fixed.c
    mpegvideodata.c
    mpegaudioenc_float.c
    mpegpicture.c
    mpegaudiodsp_float.c
    mpegaudiodsp_fixed.c
    mqc.c
    mqcdec.c
    mpegutils.c
    mpegvideodsp.c
    mpl2dec.c
    mqcenc.c
    mpegvideoencdsp.c
    mpegvideo_dec.c
    msgsmdec.c
    mpegvideo.c
    msmpeg4data.c
    mpegvideo_parser.c
    mpegvideo_enc.c
    mpegvideo_motion.c
    msp2dec.c
    msrle.c
    msrledec.c
    mss1.c
    mss12.c
    msmpeg4.c
    msmpeg4dec.c
    mss2dsp.c
    msmpeg4enc.c
    mss3.c
    mss2.c
    mss34dsp.c
    msvideo1.c
    msvideo1enc.c
    mvcdec.c
    on2avcdata.c
    mxpegdec.c
    nuv.c
    nellymoserdec.c
    on2avc.c
    options.c
    null_bsf.c
    nellymoser.c
    opus.c
    mss4.c
    opus_celt.c
    notchlc.c
    mv30.c
    noise_bsf.c
    nellymoserenc.c
    opus_metadata_bsf.c
    opusdsp.c
    opus_parser.c
    opus_rc.c
    opus_pvq.c
    opus_silk.c
    opusdec.c
    opustab.c
    opusenc.c
    pafaudio.c
    pafvideo.c
    pamenc.c
    opusenc_psy.c
    parser.c
    parsers.c
    pcm-bluray.c
    pcm-blurayenc.c
    pcm-dvdenc.c
    pcm_rechunk_bsf.c
    pcx.c
    pcxenc.c
    pgxdec.c
    pictordec.c
    pixlet.c
    pgs_frame_merge_bsf.c
    png_parser.c
    pcm.c
    pcm-dvd.c
    photocd.c
    pixblockdsp.c
    pgssubdec.c
    proresdata.c
    pnm.c
    pnm_parser.c
    profiles.c
    pnmenc.c
    proresdec2.c
    proresdsp.c
    prores_metadata_bsf.c
    prosumer.c
    proresenc_anatoliy.c
    psd.c
    psymodel.c
    proresenc_kostya.c
    pnmdec.c
    pthread.c
    ptx.c
    qdrw.c
    qcelpdec.c
    qoi_parser.c
    qoidec.c
    pthread_frame.c
    qpeg.c
    pthread_slice.c
    qtrle.c
    qsv_api.c
    qpeldsp.c
    r210dec.c
    qtrleenc.c
    r210enc.c
    qdmc.c
    qdm2.c
    qoienc.c
    rangecoder.c
    ra144.c
    rdft.c
    rl.c
    ra144dec.c
    ra144enc.c
    rawenc.c
    raw.c
    ra288.c
    remove_extradata_bsf.c
    rle.c
    rawdec.c
    roqaudioenc.c
    rl2.c
    ralf.c
    roqvideoenc.c
    roqvideodec.c
    ratecontrol.c
    roqvideo.c
    realtextdec.c
    rpza.c
    rtjpeg.c
    rpzaenc.c
    rv30dsp.c
    rv34_parser.c
    rv34dsp.c
    rv40dsp.c
    rv10.c
    rv10enc.c
    rv20enc.c
    s302m.c
    rv30.c
    s302menc.c
    samidec.c
    sanm.c
    sbc.c
    rv40.c
    sbc_parser.c
    rv34.c
    sbcdec_data.c
    sbcdec.c
    sbcdsp.c
    sbcdsp_data.c
    sbcenc.c
    sbrdsp.c
    sbrdsp_fixed.c
    scpr.c
    setts_bsf.c
    sgidec.c
    sga.c
    sgirledec.c
    sgienc.c
    sheervideo.c
    shorten.c
    simple_idct.c
    sipr.c
    sipr16k.c
    sinewin.c
    sipr_parser.c
    siren.c
    smacker.c
    startcode.c
    snow_dwt.c
    smc.c
    snappy.c
    sonic.c
    smcenc.c
    srtenc.c
    srtdec.c
    sp5xdec.c
    sunrast.c
    subviewerdec.c
    speexdec.c
    snowdec.c
    snow.c
    speedhq.c
    snowenc.c
    speedhqenc.c
    sunrastenc.c
    svq1.c
    takdsp.c
    svq3.c
    synth_filter.c
    tak.c
    tak_parser.c
    targa.c
    targa_y216dec.c
    takdec.c
    svq1enc.c
    svq1dec.c
    targaenc.c
    textdec.c
    texturedsp.c
    texturedspenc.c
    tiff_common.c
    tiff.c
    tiertexseqv.c
    tiffenc.c
    tmv.c
    trace_headers_bsf.c
    tpeldsp.c
    ttadata.c
    truehd_core_bsf.c
    ttadsp.c
    truemotion2rt.c
    tta.c
    truemotion1.c
    to_upper4.c
    truemotion2.c
    ttaenc.c
    ttaencdsp.c
    truespeech.c
    ttmlenc.c
    tscc2.c
    twinvq.c
    utvideodsp.c
    txd.c
    utils.c
    ulti.c
    twinvqdec.c
    v210dec.c
    v210x.c
    v308dec.c
    v210enc.c
    utvideoenc.c
    v408dec.c
    v308enc.c
    utvideodec.c
    v408enc.c
    v410enc.c
    vb.c
    v410dec.c
    vbndec.c
    vble.c
    vbnenc.c
    vc1.c
    vc1_block.c
    vc1_parser.c
    vc1_mc.c
    vc1_pred.c
    version.c
    vc2enc.c
    vc1data.c
    vlc.c
    vmdaudio.c
    vmdvideo.c
    vorbis.c
    vc1_loopfilter.c
    videodsp.c
    vmnc.c
    vc1dec.c
    vc1dsp.c
    vima.c
    vc2enc_dwt.c
    vcr1.c
    vorbisdsp.c
    vp3_parser.c
    vorbis_parser.c
    vorbisdec.c
    vp3.c
    vorbis_data.c
    vp3dsp.c
    vp56.c
    vp8_parser.c
    vp8dsp.c
    vp5.c
    vp9_metadata_bsf.c
    vp6dsp.c
    vp6.c
    vorbisenc.c
    vp56data.c
    vp56dsp.c
    vp8.c
    vp9.c
    vp9_superframe_split_bsf.c
    vp9_raw_reorder_bsf.c
    vp9_parser.c
    vp9_superframe_bsf.c
    vp9dsp_8bpp.c
    vp9dsp.c
    vp9dsp_12bpp.c
    vp9dsp_10bpp.c
    vpx_rac.c
    wavpackdata.c
    vqavideo.c
    wavpack.c
    vp9block.c
    vp9lpf.c
    vp9data.c
    vp9prob.c
    wavpackenc.c
    vp9recon.c
    vp9mvs.c
    wbmpdec.c
    wma_common.c
    webp_parser.c
    wma_freqs.c
    wbmpenc.c
    webvttdec.c
    webvttenc.c
    wma.c
    wmaenc.c
    webp.c
    wmadec.c
    wmv2data.c
    wmalosslessdec.c
    x86/aacencdsp.asm
    x86/aacpsdsp.asm
    wmv2dsp.c
    wrapped_avframe.c
    ws-snd1.c
    x86/ac3dsp.asm
    wmaprodec.c
    wmavoice.c
    x86/ac3dsp_downmix.asm
    x86/aacpsdsp_init.c
    x86/alacdsp.asm
    x86/aacencdsp_init.c
    wmv2.c
    x86/audiodsp.asm
    x86/blockdsp.asm
    wmv2dec.c
    x86/ac3dsp_init.c
    x86/alacdsp_init.c
    wmv2enc.c
    x86/bswapdsp.asm
    wnv1.c
    x86/audiodsp_init.c
    x86/cavsidct.asm
    x86/celt_pvq_search.asm
    x86/cfhddsp.asm
    x86/cfhdencdsp.asm
    x86/bswapdsp_init.c
    x86/dcadsp.asm
    x86/dct32.asm
    x86/dirac_dwt.asm
    x86/cfhddsp_init.c
    x86/cavsdsp.c
    x86/blockdsp_init.c
    x86/cfhdencdsp_init.c
    x86/diracdsp.asm
    x86/dnxhdenc.asm
    x86/constants.c
    x86/dcadsp_init.c
    x86/dirac_dwt_init.c
    x86/fft.asm
    x86/celt_pvq_init.c
    x86/diracdsp_init.c
    x86/flacdsp.asm
    x86/dct_init.c
    x86/fmtconvert.asm
    x86/fpel.asm
    x86/g722dsp.asm
    x86/fdct.c
    x86/fdctdsp_init.c
    x86/flacencdsp_init.c
    x86/flacdsp_init.c
    x86/fft_init.c
    x86/h263_loopfilter.asm
    x86/g722dsp_init.c
    x86/fmtconvert_init.c
    x86/dnxhdenc_init.c
    x86/h264_chromamc.asm
    x86/h264_chromamc_10bit.asm
    x86/h264_deblock.asm
    x86/h263dsp_init.c
    x86/h264_deblock_10bit.asm
    x86/h264_idct.asm
    x86/h264_idct_10bit.asm
    x86/h264_intrapred.asm
    x86/h264_intrapred_10bit.asm
    x86/h264_qpel_10bit.asm
    x86/h264_qpel_8bit.asm
    x86/h264_weight.asm
    x86/h264_weight_10bit.asm
    x86/hevc_add_res.asm
    x86/hevc_deblock.asm
    x86/hevc_idct.asm
    x86/hevc_mc.asm
    x86/hevc_sao.asm
    x86/h264chroma_init.c
    x86/h264dsp_init.c
    x86/h264_intrapred_init.c
    x86/h264_qpel.c
    x86/hevc_sao_10bit.asm
    x86/hpeldsp.asm
    x86/hpeldsp_vp3.asm
    x86/huffyuvdsp.asm
    x86/huffyuvencdsp.asm
    x86/hpeldsp_init.c
    x86/idctdsp.asm
    x86/hevcdsp_init.c
    x86/huffyuvdsp_init.c
    x86/hpeldsp_vp3_init.c
    x86/imdct36.asm
    x86/jpeg2000dsp.asm
    x86/lossless_audiodsp.asm
    x86/lossless_videodsp.asm
    x86/huffyuvencdsp_init.c
    x86/jpeg2000dsp_init.c
    x86/lossless_videoencdsp.asm
    x86/lossless_audiodsp_init.c
    x86/idctdsp_init.c
    x86/lossless_videodsp_init.c
    x86/mdct15.asm
    x86/me_cmp.asm
    x86/mlpdsp.asm
    x86/lossless_videoencdsp_init.c
    x86/lpc.c
    x86/mdct15_init.c
    x86/mlpdsp_init.c
    x86/mpegvideoencdsp.asm
    x86/mpegaudiodsp.c
    x86/mpegvideodsp.c
    x86/opusdsp.asm
    x86/pixblockdsp.asm
    x86/proresdsp.asm
    x86/qpel.asm
    x86/qpeldsp.asm
    x86/opusdsp_init.c
    x86/me_cmp_init.c
    x86/rv34dsp.asm
    x86/mpegvideoencdsp_init.c
    x86/rv40dsp.asm
    x86/sbcdsp.asm
    x86/qpeldsp_init.c
    x86/pixblockdsp_init.c
    x86/proresdsp_init.c
    x86/mpegvideo.c
    x86/mpegvideoenc.c
    x86/rv34dsp_init.c
    x86/sbrdsp.asm
    x86/simple_idct.asm
    x86/simple_idct10.asm
    x86/svq1enc.asm
    x86/sbrdsp_init.c
    x86/synth_filter.asm
    x86/rv40dsp_init.c
    x86/sbcdsp_init.c
    x86/takdsp.asm
    x86/ttadsp.asm
    x86/ttaencdsp.asm
    x86/utvideodsp.asm
    x86/takdsp_init.c
    x86/v210.asm
    x86/ttaencdsp_init.c
    x86/ttadsp_init.c
    x86/v210enc.asm
    x86/synth_filter_init.c
    x86/vc1dsp_loopfilter.asm
    x86/utvideodsp_init.c
    x86/vc1dsp_mc.asm
    x86/videodsp.asm
    x86/v210-init.c
    x86/snowdsp.c
    x86/vorbisdsp.asm
    x86/vc1dsp_init.c
    x86/svq1enc_init.c
    x86/vp3dsp.asm
    x86/vp6dsp.asm
    x86/v210enc_init.c
    x86/vp8dsp.asm
    x86/vorbisdsp_init.c
    x86/vc1dsp_mmx.c
    x86/videodsp_init.c
    x86/vp8dsp_loopfilter.asm
    x86/vp6dsp_init.c
    x86/vp9intrapred.asm
    x86/vp9intrapred_16bpp.asm
    x86/vp9itxfm.asm
    x86/vp9itxfm_16bpp.asm
    x86/vp3dsp_init.c
    x86/vp9lpf.asm
    x86/vp8dsp_init.c
    x86/vp9lpf_16bpp.asm
    x86/vp9mc.asm
    x86/vp9dsp_init.c
    x86/vp9dsp_init_10bpp.c
    x86/vp9dsp_init_12bpp.c
    x86/vp9dsp_init_16bpp.c
    x86/vp9mc_16bpp.asm
    x86/xvididct.asm
    xface.c
    x86/xvididct_init.c
    xbm_parser.c
    xan.c
    xbmdec.c
    xbmenc.c
    xfacedec.c
    xfaceenc.c
    xiph.c
    xma_parser.c
    xl.c
    xpmdec.c
    xsubenc.c
    xvididct.c
    xsubdec.c
    xwddec.c
    y41pdec.c
    xwdenc.c
    xxan.c
    y41penc.c
    ylc.c
    yop.c
    yuv4dec.c
    yuv4enc.c)