add_library(avfilter)
target_link_libraries(avfilter PRIVATE ffmpeg_defaults swscale)
target_sources(avfilter PRIVATE
    aeval.c
    af_acrossover.c
    af_acontrast.c
    af_acopy.c
    af_acrusher.c
    af_adeclick.c
    af_adecorrelate.c
    af_adelay.c
    af_adenorm.c
    af_aderivative.c
    af_adynamicequalizer.c
    af_aecho.c
    af_aemphasis.c
    af_adynamicsmooth.c
    af_aexciter.c
    af_afade.c
    af_afftdn.c
    af_afwtdn.c
    af_afir.c
    af_afreqshift.c
    af_aformat.c
    af_afftfilt.c
    af_agate.c
    af_aiir.c
    af_alimiter.c
    af_amerge.c
    af_amix.c
    af_amultiply.c
    af_anequalizer.c
    af_anlmdn.c
    af_anull.c
    af_apad.c
    af_anlms.c
    af_aphaser.c
    af_apulsator.c
    af_apsyclip.c
    af_aresample.c
    af_asetrate.c
    af_asetnsamples.c
    af_asdr.c
    af_asoftclip.c
    af_arnndn.c
    af_ashowinfo.c
    af_astats.c
    af_asupercut.c
    af_atempo.c
    af_atilt.c
    af_asubboost.c
    af_aspectralstats.c
    af_axcorrelate.c
    af_biquads.c
    af_channelmap.c
    af_channelsplit.c
    af_chorus.c
    af_compand.c
    af_crossfeed.c
    af_compensationdelay.c
    af_dcshift.c
    af_deesser.c
    af_dialoguenhance.c
    af_crystalizer.c
    af_drmeter.c
    af_dynaudnorm.c
    af_earwax.c
    af_extrastereo.c
    af_firequalizer.c
    af_flanger.c
    af_haas.c
    af_hdcd.c
    af_headphone.c
    af_join.c
    af_loudnorm.c
    af_mcompand.c
    af_pan.c
    af_replaygain.c
    af_sidechaincompress.c
    af_silenceremove.c
    af_silencedetect.c
    af_speechnorm.c
    af_stereotools.c
    af_superequalizer.c
    af_tremolo.c
    af_vibrato.c
    af_surround.c
    af_volumedetect.c
    allfilters.c
    af_virtualbass.c
    asink_anullsink.c
    af_volume.c
    af_stereowiden.c
    asrc_afirsrc.c
    asrc_anoisesrc.c
    asrc_anullsrc.c
    asrc_hilbert.c
    asrc_sinc.c
    asrc_sine.c
    audio.c
    avf_abitscope.c
    avf_ahistogram.c
    avf_aphasemeter.c
    avf_avectorscope.c
    avf_showcqt.c
    avf_concat.c
    avf_showfreqs.c
    bbox.c
    avf_showspatial.c
    avf_showspectrum.c
    avf_showvolume.c
    avf_showwaves.c
    avfilter.c
    avfiltergraph.c
    buffersink.c
    colorspace.c
    colorspacedsp.c
    buffersrc.c
    dnn/dnn_backend_native_layer_avgpool.c
    dnn/dnn_backend_common.c
    dnn/dnn_backend_native.c
    dnn/dnn_backend_native_layer_conv2d.c
    dnn/dnn_interface.c
    dnn/dnn_backend_native_layer_pad.c
    dnn/dnn_backend_native_layers.c
    dnn/dnn_backend_native_layer_maximum.c
    edge_common.c
    f_bench.c
    dnn/dnn_io_proc.c
    dnn_filter_common.c
    f_cue.c
    dnn/dnn_backend_native_layer_mathunary.c
    dnn/dnn_backend_native_layer_mathbinary.c
    ebur128.c
    f_drawgraph.c
    dnn/safe_queue.c
    dnn/dnn_backend_native_layer_depth2space.c
    dnn/dnn_backend_native_layer_dense.c
    drawutils.c
    dnn/queue.c
    f_ebur128.c
    f_graphmonitor.c
    f_loop.c
    f_interleave.c
    f_metadata.c
    f_realtime.c
    f_perms.c
    f_reverse.c
    f_segment.c
    f_sidedata.c
    f_streamselect.c
    fifo.c
    f_sendcmd.c
    f_latency.c
    f_select.c
    formats.c
    framequeue.c
    framepool.c
    framesync.c
    generate_wave_table.c
    graphdump.c
    graphparser.c
    lswsutils.c
    lavfutils.c
    motion_estimation.c
    qp_table.c
    pthread.c
    file_open.c
    scale_eval.c
    scene_sad.c
    setpts.c
    split.c
    settb.c
    src_avsynctest.c
    transform.c
    src_movie.c
    trim.c
    vaf_spectrumsynth.c
    version.c
    vf_addroi.c
    vf_alphamerge.c
    vf_amplify.c
    vf_aspect.c
    vf_atadenoise.c
    vf_avgblur.c
    vf_bbox.c
    vf_bilateral.c
    vf_bitplanenoise.c
    vf_blackdetect.c
    vf_blockdetect.c
    vf_blurdetect.c
    vf_blend.c
    vf_bm3d.c
    vf_bwdif.c
    vf_cas.c
    vf_chromakey.c
    vf_chromanr.c
    vf_chromashift.c
    vf_ciescope.c
    vf_colorchannelmixer.c
    vf_codecview.c
    vf_colorconstancy.c
    vf_colorbalance.c
    vf_colorcontrast.c
    vf_colorize.c
    vf_colorcorrect.c
    vf_colorkey.c
    vf_colorspace.c
    vf_convolution.c
    vf_colormap.c
    vf_convolve.c
    vf_crop.c
    vf_copy.c
    vf_colortemperature.c
    vf_colorlevels.c
    vf_deband.c
    vf_dblur.c
    vf_datascope.c
    vf_curves.c
    vf_deblock.c
    vf_dejudder.c
    vf_dctdnoiz.c
    vf_derain.c
    vf_despill.c
    vf_detelecine.c
    vf_displace.c
    vf_dnn_classify.c
    vf_deshake.c
    vf_dnn_detect.c
    vf_decimate.c
    vf_deflicker.c
    vf_dedot.c
    vf_drawbox.c
    vf_dnn_processing.c
    vf_edgedetect.c
    vf_entropy.c
    vf_elbg.c
    vf_epx.c
    vf_estdif.c
    vf_fftdnoiz.c
    vf_fftfilt.c
    vf_feedback.c
    vf_exposure.c
    vf_fade.c
    vf_extractplanes.c
    vf_field.c
    vf_fieldhint.c
    vf_fieldmatch.c
    vf_fieldorder.c
    vf_format.c
    vf_framepack.c
    vf_framerate.c
    vf_fps.c
    vf_freezedetect.c
    vf_framestep.c
    vf_freezeframes.c
    vf_fillborders.c
    vf_gblur.c
    vf_floodfill.c
    vf_geq.c
    vf_grayworld.c
    vf_histogram.c
    vf_hflip.c
    vf_guided.c
    vf_hwmap.c
    vf_hwupload.c
    vf_huesaturation.c
    vf_hwdownload.c
    vf_hue.c
    vf_hsvkey.c
    vf_hqx.c
    vf_gradfun.c
    vf_hysteresis.c
    vf_identity.c
    vf_il.c
    vf_idet.c
    vf_lagfun.c
    vf_lenscorrection.c
    vf_limitdiff.c
    vf_lumakey.c
    vf_limiter.c
    vf_lut.c
    vf_lut2.c
    vf_maskedclamp.c
    vf_lut3d.c
    vf_maskedmerge.c
    vf_maskedminmax.c
    vf_maskedthreshold.c
    vf_maskfun.c
    vf_median.c
    vf_mergeplanes.c
    vf_midequalizer.c
    vf_monochrome.c
    vf_minterpolate.c
    vf_mix.c
    vf_mestimate.c
    vf_morpho.c
    vf_multiply.c
    vf_neighbor.c
    vf_negate.c
    vf_normalize.c
    vf_null.c
    vf_noise.c
    vf_pad.c
    vf_overlay.c
    vf_nlmeans.c
    vf_palettegen.c
    vf_paletteuse.c
    vf_photosensitivity.c
    vf_pixelize.c
    vf_pixdesctest.c
    vf_pseudocolor.c
    vf_psnr.c
    vf_premultiply.c
    vf_readeia608.c
    vf_random.c
    vf_qp.c
    vf_remap.c
    vf_removegrain.c
    vf_readvitc.c
    vf_scale.c
    vf_rotate.c
    vf_removelogo.c
    vf_scdet.c
    vf_scroll.c
    vf_selectivecolor.c
    vf_separatefields.c
    vf_setparams.c
    vf_shear.c
    vf_showpalette.c
    vf_showinfo.c
    vf_shuffleframes.c
    vf_shufflepixels.c
    vf_shuffleplanes.c
    vf_siti.c
    vf_signalstats.c
    vf_sr.c
    vf_ssim.c
    vf_stack.c
    vf_swaprect.c
    vf_telecine.c
    vf_swapuv.c
    vf_threshold.c
    vf_tile.c
    vf_thumbnail.c
    vf_tmidequalizer.c
    vf_tonemap.c
    vf_tpad.c
    vf_transpose.c
    vf_unsharp.c
    vf_untile.c
    vf_v360.c
    vf_varblur.c
    vf_vectorscope.c
    vf_vfrdet.c
    vf_vflip.c
    vf_vibrance.c
    vf_vif.c
    vf_vignette.c
    vf_vmafmotion.c
    vf_w3fdif.c
    vf_weave.c
    vf_waveform.c
    vf_xbr.c
    x86/af_afir.asm
    x86/af_anlmdn.asm
    vf_xfade.c
    vf_zoompan.c
    x86/af_volume.asm
    vf_yadif.c
    vf_yaepblur.c
    x86/af_afir_init.c
    video.c
    vsrc_gradients.c
    vsrc_cellauto.c
    vsink_nullsink.c
    vsrc_life.c
    vf_xmedian.c
    x86/af_anlmdn_init.c
    vsrc_mandelbrot.c
    vsrc_sierpinski.c
    vsrc_testsrc.c
    x86/avf_showcqt.asm
    x86/colorspacedsp.asm
    x86/scene_sad.asm
    x86/vf_atadenoise.asm
    x86/af_volume_init.c
    x86/vf_blend.asm
    vsrc_ddagrab.c
    x86/colorspacedsp_init.c
    x86/vf_bwdif.asm
    x86/vf_convolution.asm
    x86/vf_atadenoise_init.c
    x86/avf_showcqt_init.c
    x86/scene_sad_init.c
    x86/vf_framerate.asm
    x86/vf_convolution_init.c
    x86/vf_blend_init.c
    x86/vf_bwdif_init.c
    x86/vf_gblur.asm
    x86/vf_gradfun.asm
    x86/vf_hflip.asm
    x86/vf_framerate_init.c
    x86/vf_gradfun_init.c
    x86/vf_gblur_init.c
    x86/vf_idet.asm
    x86/vf_limiter.asm
    x86/vf_lut3d.asm
    x86/vf_maskedclamp.asm
    x86/vf_maskedmerge.asm
    x86/vf_nlmeans.asm
    x86/vf_limiter_init.c
    x86/vf_hflip_init.c
    x86/vf_idet_init.c
    x86/vf_maskedclamp_init.c
    x86/vf_overlay.asm
    x86/vf_lut3d_init.c
    x86/vf_psnr.asm
    x86/vf_nlmeans_init.c
    x86/vf_maskedmerge_init.c
    x86/vf_ssim.asm
    x86/vf_threshold.asm
    x86/vf_noise.c
    x86/vf_transpose.asm
    x86/vf_overlay_init.c
    x86/vf_ssim_init.c
    x86/vf_v360.asm
    x86/vf_removegrain_init.c
    x86/vf_psnr_init.c
    x86/vf_w3fdif.asm
    x86/vf_transpose_init.c
    x86/vf_threshold_init.c
    x86/vf_yadif.asm
    x86/yadif-10.asm
    x86/yadif-16.asm
    x86/vf_v360_init.c
    x86/vf_w3fdif_init.c
    x86/vf_yadif_init.c
    yadif_common.c)